# infra-v2

./: .gitignore  .gitleaks.toml  .sops.yaml  CLAUDE.md  README.md  taskfile.yaml
.githooks/: pre-commit
.github/workflows/: gitleaks.yml
backup-operator/: build.gradle.kts  pom.xml  settings.gradle.kts
backup-operator/gradle/: libs.versions.toml
backup-operator/k8s/: test-resource.yaml
backup-operator/src/main/resources/: log4j2.xml
flux/apps/base/abrabus/: certificate.yaml  deployment.yaml  ingressroute.yaml  kustomization.yaml  namespace.yaml  pull.secret.yaml  service.yaml
flux/apps/base/aquilla-website/: certificate.yaml  deployment.yaml  ingressroute.yaml  kustomization.yaml  namespace.yaml  pull.secret.yaml  service.yaml  smtp.secret.yaml
flux/apps/production/: abrabus.yaml  aquilla-website.yaml  authentik.yaml  dignita-crm.yaml  johnjtac.yaml  kustomization.yaml  livesync.yaml  perforce.yaml  portfolio.yaml  registry.yaml  sage-ai.yaml  taida-portfolio.yaml
flux/clusters/production/: README.md  apps.yaml  infrastructure.yaml
flux/infrastructure/configs/: cluster-issuer.yaml  kustomization.yaml  metallb-pool.yaml
flux/infrastructure/controllers/: cert-manager.yaml  cloudnative-pg.yaml  kustomization.yaml  metallb.yaml  namespaces.yaml  openebs.yaml  security-headers-middleware.yaml  traefik.yaml
johninfra/: .gitignore  .sops.yaml  constants.py  deploy.py  enroll.py  gen-k0s.py  inventory.py  log.py  pyproject.toml
johninfra/lib/: sops.py  storedhost.py
johninfra/typedef/: tailscale.py
k0sctl/: k0sctl-base.yaml
(+99 files in other folders)
